[gd_scene load_steps=2 format=3 uid="uid://dal5qjn7fv1gd"]

[ext_resource type="Script" path="res://Scripts/sc_defect_item.gd" id="1_0p5gq"]

[node name="sc_defect_item" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_0p5gq")

[node name="DefectsInput" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="SampleSizeInput" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="DeleteButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = " X "
